Fixed thumbnail profile pic so it stops stretching / squasing image - again

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -77,6 +77,7 @@ main {
 .image-thumbnail {
     width: 50px;
     height: 50px;
+    object-fit: cover;
 }
 
 /* Post Fragment */
